--- a/42LabsProject/app/src/main/res/layout/addon_view.xml
+++ b/42LabsProject/app/src/main/res/layout/addon_view.xml
@@ -1,6 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="5dp"
+    app:cardBackgroundColor="@color/colorWhite"
+    android:layout_margin="5dp"
+    android:layout_height="100dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="80dp"
+            app:civ_border_width="1dp"
+            android:id="@+id/ivUserImage"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/index"
+            app:civ_border_color="@color/colorPrimary"
+            android:layout_height="80dp"/>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="vertical"
+            android:layout_toRightOf="@+id/ivUserImage"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="James Robert"
+                android:id="@+id/txtName"
+                android:textSize="14sp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/colorPrimary"
+                android:layout_toRightOf="@+id/ivUserImage"
+                android:layout_height="wrap_content"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_below="@+id/txtName"
+
+
+                android:text="James Robert"
+                android:id="@+id/txtEmail"
+
+                android:textSize="16sp"
+                android:textColor="@color/colorAccent"
+
+                android:layout_toRightOf="@+id/ivUserImage"
+                android:layout_height="wrap_content"/>
+
+
+
+        </LinearLayout>
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="James Robert"
+            android:layout_alignParentRight="true"
+            android:id="@+id/txtTimeRemaining"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="20dp"
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimary"
+
+            android:layout_height="wrap_content"/>
+
+
+
+
+    </RelativeLayout>
+
+
+
+</androidx.cardview.widget.CardView>
