--- a/MyApplication2/app/src/main/res/layout/activity_new_ui.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_new_ui.xml
@@ -1,10 +1,317 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".NewUiActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:background="@drawable/background"
+        android:id="@+id/rlHeader"
+        android:layout_height="130dp">
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_marginLeft="34dp"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/logo"
+            android:layout_height="60dp"
+            android:layout_marginStart="34dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="Dsewa"
+                android:fontFamily="@font/def_font"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_below="@+id/rlHeader"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="180dp"
+                android:id="@+id/card1"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:paddingRight="10dp"
+                app:cardElevation="5dp"
+                android:paddingStart="10dp"
+
+                android:layout_gravity="center"
+                android:paddingLeft="10dp"
+                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="@color/white"
+                android:layout_height="90dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
+
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/wallet_balance"
+                        android:layout_height="35dp"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"
+                        android:textSize="11sp"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/def_font"
+                        android:text="Wallet Balance NPR 60"
+                        android:layout_height="wrap_content">
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/def_font"
+                        android:text="INR 300"
+                        android:layout_height="wrap_content">
+
+                    </TextView>
+
+
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="180dp"
+                android:layout_marginTop="20dp"
+                android:id="@+id/card2"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@+id/card1"
+                android:paddingRight="10dp"
+                android:paddingStart="10dp"
+
+                app:cardElevation="5dp"
+                android:paddingLeft="10dp"
+                android:paddingBottom="10dp"
+                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="@color/white"
+                android:layout_height="90dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_gravity="center"
+
+                        android:src="@drawable/wallet_balance"
+                        android:layout_height="35dp"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"
+                        android:textSize="11sp"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/def_font"
+                        android:text="Wallet Balance NPR 60"
+                        android:layout_height="wrap_content">
+
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"
+                        android:layout_marginTop="5dp"
+                        android:fontFamily="@font/def_font"
+                        android:text="INR 300"
+                        android:layout_height="wrap_content">
+
+                    </TextView>
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:src="@drawable/banner"
+                android:orientation="vertical"
+                android:id="@+id/llBanner"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/card2"
+                android:background="@drawable/banner"
+                android:layout_height="160dp">
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:src="@drawable/banner"
+                android:paddingRight="10dp"
+                android:background="@drawable/shape_shadow"
+                android:orientation="vertical"
+                android:id="@+id/llService"
+
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_below="@+id/llBanner"
+                android:layout_height="160dp">
+
+               <androidx.recyclerview.widget.RecyclerView
+                   android:layout_width="wrap_content"
+                   android:layout_margin="5dp"
+                   android:layout_marginTop="10dp"
+                   android:layout_marginBottom="10dp"
+
+                   android:id="@+id/recyclerItems"
+                   android:layout_height="match_parent">
+
+               </androidx.recyclerview.widget.RecyclerView>
+
+
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:src="@drawable/banner"
+                android:paddingRight="10dp"
+                android:background="@drawable/shape_shadow"
+                android:layout_marginTop="8dp"
+                android:orientation="vertical"
+
+
+                android:id="@+id/llDth"
+
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_below="@+id/llService"
+                android:layout_height="160dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_margin="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+
+                    android:id="@+id/recyclerService"
+                    android:layout_height="match_parent">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/llDth"
+                android:id="@+id/txtTitle"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:fontFamily="@font/def_font"
+                android:layout_marginLeft="20dp"
+                android:text="Popular Services India"
+
+                android:layout_height="wrap_content"/>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_margin="5dp"
+                android:layout_below="@+id/txtTitle"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+
+                android:id="@+id/recyclerServiceIndia"
+                android:layout_height="match_parent">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/recyclerServiceIndia"
+                android:id="@+id/txtTitleNepal"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:fontFamily="@font/def_font"
+                android:layout_marginLeft="20dp"
+
+                android:text="Popular Services Nepal"
+
+                android:layout_height="wrap_content"/>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_margin="5dp"
+                android:layout_below="@+id/txtTitleNepal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+
+                android:id="@+id/recyclerServiceNepal"
+                android:layout_height="match_parent">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+
+
+        </RelativeLayout>
+    </ScrollView>
+
+
+
+
+
+</RelativeLayout>
