--- a/MyApplication2/app/src/main/res/layout/item_adapter_new.xml
+++ b/MyApplication2/app/src/main/res/layout/item_adapter_new.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="35dp"
+    android:layout_marginRight="5dp"
+    android:layout_height="wrap_content"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="35dp"
+        android:src="@drawable/wallet_balance"
+
+        android:id="@+id/ivImage"
+        android:layout_gravity="center"
+        android:layout_height="25sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:textSize="11sp"
+        android:text="Wallet"
+        android:lines="1"
+        android:ellipsize="end"
+        android:inputType="textMultiLine"
+
+
+        android:textColor="@color/black"
+        android:id="@+id/txtWallet"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:fontFamily="@font/def_font"
+        android:layout_height="wrap_content">
+
+    </TextView>
+
+</LinearLayout>
