--- a/MyApplication2/app/src/main/res/layout/service_india_adapter.xml
+++ b/MyApplication2/app/src/main/res/layout/service_india_adapter.xml
@@ -1,6 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    android:orientation="vertical"
+    app:cardElevation="4dp"
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+    <LinearLayout
+        android:layout_width="90dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:background="@drawable/shape_shadow"
+
+        android:layout_height="90dp">
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_gravity="center"
+
+            android:src="@drawable/wallet_balance"
+
+            android:layout_height="35dp">
+
+        </ImageView>
+
+    </LinearLayout>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="12sp"
+        android:text="Vodafone"
+        android:textColor="@color/black"
+        android:fontFamily="@font/def_font"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content">
+
+    </TextView>
+
+</LinearLayout>
