--- a/PrachiTask/app/src/main/res/layout/activity_add_name.xml
+++ b/PrachiTask/app/src/main/res/layout/activity_add_name.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/toos"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".AddNameActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/edtName"
+        android:layout_margin="5dp"
+        android:hint="What is your Name?"
+        android:layout_height="wrap_content">
+
+    </EditText>
+
+    <Button
+        android:layout_width="match_parent"
+        android:text="Next"
+        android:id="@+id/btnNext"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content">
+
+    </Button>
+
+</LinearLayout>
