--- a/PrachiTask/app/src/main/res/layout/activity_select_cricketer.xml
+++ b/PrachiTask/app/src/main/res/layout/activity_select_cricketer.xml
@@ -1,10 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginTop="20dp"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".SelectCricketerActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"
+        android:text="Who is the best cricketer in the world?"
+        android:layout_height="wrap_content">
+
+
+
+    </TextView>
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:id="@+id/rdCricketers"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:textSize="11sp"
+            android:text="Sachin Tendulkar"
+            android:id="@+id/rdSachin"
+            android:layout_height="wrap_content"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:text="Virat Kohli"
+            android:textSize="11sp"
+
+            android:id="@+id/rdVirat"
+            android:layout_height="wrap_content"/>
+
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:text=" Adam Gilchirst"
+            android:textSize="11sp"
+
+            android:id="@+id/rdAdam"
+            android:layout_height="wrap_content"/>
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:text="Jacques Kallis"
+            android:textSize="11sp"
+
+            android:id="@+id/rdJac"
+            android:layout_height="wrap_content"/>
+
+
+    </RadioGroup>
+
+    <Button
+        android:layout_width="match_parent"
+        android:text="Next"
+        android:id="@+id/btnNext"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content">
+
+    </Button>
+
+</LinearLayout>
